# VulkanTest

./: .clang-format  .gitignore  CMakeLists.txt  Shaders.cmake  VulkanTest.sln
Libraries/: CMakeLists.txt  imgui-1.82
Libraries/glfw-3.3.4.bin.WIN64/: CMakeLists.txt
VulkanTest/: Defines.h  Shaders.cpp  Shaders.hpp  VulkanDevices.h  VulkanInit.cpp  VulkanInit.hpp  VulkanRendering.hpp  VulkanTest.vcxproj  VulkanTest.vcxproj.filters  compileShaders.bat  main.cpp  utils.hpp
VulkanTest/Vulkan/: VulkanDevices.cpp  VulkanDevices.hpp  VulkanInit.cpp  VulkanInit.hpp  VulkanRendering.cpp  VulkanRendering.hpp
VulkanTest/assets/shaders/: test.frag.spv
VulkanTest/shaders/: test.frag
